# gooroom-control-center

./: meson.build
panels/: meson.build
panels/color/: color.ui
panels/custom/: cc-custom-panel.c  cc-custom-panel.h  custom.gresource.xml  custom.ui  gnome-custom-panel.desktop.in.in  meson.build
panels/datetime/: cc-datetime-panel.c  datetime.ui
panels/display/: cc-display-panel.c  cc-night-light-dialog.c  cc-night-light-dialog.ui
panels/font/: meson.build
panels/gooroom/: cc-gooroom-panel.c  cc-gooroom-panel.h  gnome-gooroom-panel.desktop.in.in  gooroom.gresource.xml  gooroom.ui  meson.build
panels/hancom/: cc-hancom-panel.c  cc-hancom-panel.h  gnome-hancom-panel.desktop.in.in  hancom.gresource.xml  hancom.ui  meson.build
panels/info/: cc-info-overview-panel.c  cc-info-overview-panel.c.orig  info-overview.ui
panels/lsftest/: cc-lsftest-panel.c  cc-lsftest-panel.h  cp.glade  gnome-lsftest-panel.desktop.in.in  lsftest.glade  lsftest.gresource.xml  lsftest.ui  meson.build  t
panels/mouse/: gnome-mouse-properties.c  gnome-mouse-properties.ui
panels/network/: cc-wifi-panel.c  net-device-ethernet.c  net-device-ethernet.h
panels/online-accounts/: online-accounts.ui
panels/power/: cc-power-panel.c  power.ui
panels/printers/: cc-printers-panel.c  pp-options-dialog.c  pp-printer-entry.c  printers.ui  (+1 more)
panels/security-framework/: .cc-security-framework-panel.c.swp  .security-framework.ui.swp  cc-security-framework-panel.c  cc-security-framework-panel.h  gnome-security-framework-panel.desktop.in.in  meson.build  security-framework.gresource.xml  security-framework.ui  security-framework.ui.cp
po/: POTFILES.in  de.po  el.po  en.po  en_GB.po  eo.po  es.po  fur.po  it.po  ja.po  ko.po  sl.po  sv.po  tr.po
shell/: cc-application.c  cc-panel-list.c  cc-panel-list.h  cc-panel-list.ui  cc-panel-loader.c  cc-shell-model.c  cc-shell-model.h  cc-window.c  org.gnome.ControlCenter.gschema.xml
(+27 files in other folders)
